Bug 787812 - Add Nexus S pixels constants. r=kchen